feat: added translation datasources fixing and parsing

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -139,13 +139,19 @@
     "%pip install datasets\n",
     "%pip install polars\n",
     "%pip install seaborn\n",
-    "%pip install matplotlib\n",
-    "%pip install levenshtein"
+    "%pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we preprocess our datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,53 +164,208 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>1.243455574931253\tÓ anoÁdovci věru v Pána svého neuvěřili!\tNow surely Ad disbelieved in their Lord.\tcs\ten</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;1.232500167844209\tVe jménu Boh…</td></tr><tr><td>&quot;1.2306260328933156\tEXKLUZIVNĚ:…</td></tr><tr><td>&quot;1.221667288984966\tOba mohli př…</td></tr><tr><td>&quot;1.2046566688309361\tBylo by to …</td></tr><tr><td>&quot;1.2012134076981507\tBůh Enkai s…</td></tr></tbody></table></div>"
+       "<small>shape: (5, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lhs</th><th>rhs</th><th>ep-09-11-26-008-04.txt</th><th>008-04</th><th></th><th>_duplicated_0</th><th>_duplicated_1</th><th>_duplicated_2</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;Vážená paní předsedající, jest…</td><td>&quot;(EL) Madam President, as far a…</td><td>&quot;ep-08-06-17-012.txt&quot;</td><td>&quot;012&quot;</td><td>400</td><td>&quot;Dimitrios Papadimoulis&quot;</td><td>&quot;EL&quot;</td><td>&quot;GUE/NGL&quot;</td></tr><tr><td>&quot;Změřil jsem dobu trvání jednot…</td><td>&quot;I have timed their contributio…</td><td>&quot;ep-08-06-17-012.txt&quot;</td><td>&quot;012&quot;</td><td>400</td><td>&quot;Dimitrios Papadimoulis&quot;</td><td>&quot;EL&quot;</td><td>&quot;GUE/NGL&quot;</td></tr><tr><td>&quot;Z toho důvodu žádám, aby byla …</td><td>&quot;I therefore request that Quest…</td><td>&quot;ep-08-06-17-012.txt&quot;</td><td>&quot;012&quot;</td><td>400</td><td>&quot;Dimitrios Papadimoulis&quot;</td><td>&quot;EL&quot;</td><td>&quot;GUE/NGL&quot;</td></tr><tr><td>&quot;Předpokládám, že pan komisař n…</td><td>&quot;I take it that the Commissione…</td><td>&quot;ep-08-06-17-012.txt&quot;</td><td>&quot;012&quot;</td><td>400</td><td>&quot;Dimitrios Papadimoulis&quot;</td><td>&quot;EL&quot;</td><td>&quot;GUE/NGL&quot;</td></tr><tr><td>&quot;písemně. - (PL) Moje země, Pol…</td><td>&quot;My country, Poland, is especia…</td><td>&quot;ep-09-03-25-002.txt&quot;</td><td>&quot;002&quot;</td><td>75</td><td>&quot;Genowefa Grabowska&nbsp;&nbsp;&quot;</td><td>&quot;PL&quot;</td><td>&quot;PSE&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 1)\n",
-       "┌─────────────────────────────────┐\n",
-       "│ 1.243455574931253\tÓ anoÁdovci … │\n",
-       "│ ---                             │\n",
-       "│ str                             │\n",
-       "╞═════════════════════════════════╡\n",
-       "│ 1.232500167844209\tVe jménu Boh… │\n",
-       "│ 1.2306260328933156\tEXKLUZIVNĚ:… │\n",
-       "│ 1.221667288984966\tOba mohli př… │\n",
-       "│ 1.2046566688309361\tBylo by to … │\n",
-       "│ 1.2012134076981507\tBůh Enkai s… │\n",
-       "└─────────────────────────────────┘"
+       "shape: (5, 8)\n",
+       "┌─────────────┬─────────────┬─────────────┬────────┬─────┬─────────────┬─────────────┬─────────────┐\n",
+       "│ lhs         ┆ rhs         ┆ ep-09-11-26 ┆ 008-04 ┆     ┆ _duplicated ┆ _duplicated ┆ _duplicated │\n",
+       "│ ---         ┆ ---         ┆ -008-04.txt ┆ ---    ┆ --- ┆ _0          ┆ _1          ┆ _2          │\n",
+       "│ str         ┆ str         ┆ ---         ┆ str    ┆ i64 ┆ ---         ┆ ---         ┆ ---         │\n",
+       "│             ┆             ┆ str         ┆        ┆     ┆ str         ┆ str         ┆ str         │\n",
+       "╞═════════════╪═════════════╪═════════════╪════════╪═════╪═════════════╪═════════════╪═════════════╡\n",
+       "│ Vážená paní ┆ (EL) Madam  ┆ ep-08-06-17 ┆ 012    ┆ 400 ┆ Dimitrios   ┆ EL          ┆ GUE/NGL     │\n",
+       "│ předsedajíc ┆ President,  ┆ -012.txt    ┆        ┆     ┆ Papadimouli ┆             ┆             │\n",
+       "│ í, jest…    ┆ as far a…   ┆             ┆        ┆     ┆ s           ┆             ┆             │\n",
+       "│ Změřil jsem ┆ I have      ┆ ep-08-06-17 ┆ 012    ┆ 400 ┆ Dimitrios   ┆ EL          ┆ GUE/NGL     │\n",
+       "│ dobu trvání ┆ timed their ┆ -012.txt    ┆        ┆     ┆ Papadimouli ┆             ┆             │\n",
+       "│ jednot…     ┆ contributio ┆             ┆        ┆     ┆ s           ┆             ┆             │\n",
+       "│             ┆ …           ┆             ┆        ┆     ┆             ┆             ┆             │\n",
+       "│ Z toho      ┆ I therefore ┆ ep-08-06-17 ┆ 012    ┆ 400 ┆ Dimitrios   ┆ EL          ┆ GUE/NGL     │\n",
+       "│ důvodu      ┆ request     ┆ -012.txt    ┆        ┆     ┆ Papadimouli ┆             ┆             │\n",
+       "│ žádám, aby  ┆ that Quest… ┆             ┆        ┆     ┆ s           ┆             ┆             │\n",
+       "│ byla …      ┆             ┆             ┆        ┆     ┆             ┆             ┆             │\n",
+       "│ Předpokládá ┆ I take it   ┆ ep-08-06-17 ┆ 012    ┆ 400 ┆ Dimitrios   ┆ EL          ┆ GUE/NGL     │\n",
+       "│ m, že pan   ┆ that the    ┆ -012.txt    ┆        ┆     ┆ Papadimouli ┆             ┆             │\n",
+       "│ komisař n…  ┆ Commissione ┆             ┆        ┆     ┆ s           ┆             ┆             │\n",
+       "│             ┆ …           ┆             ┆        ┆     ┆             ┆             ┆             │\n",
+       "│ písemně. -  ┆ My country, ┆ ep-09-03-25 ┆ 002    ┆ 75  ┆ Genowefa    ┆ PL          ┆ PSE         │\n",
+       "│ (PL) Moje   ┆ Poland, is  ┆ -002.txt    ┆        ┆     ┆ Grabowska   ┆             ┆             │\n",
+       "│ země, Pol…  ┆ especia…    ┆             ┆        ┆     ┆             ┆             ┆             │\n",
+       "└─────────────┴─────────────┴─────────────┴────────┴─────┴─────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import polars as pl\n",
+    "from functools import reduce\n",
+    "import operator\n",
     "\n",
-    "wikimatrix_filepath = 'data/translation/wikimatrix_2.tsv'\n",
+    "def count_quotes(column):\n",
+    "    return pl.col(column).str.count_matches('\"')\n",
     "\n",
-    "df = pl.read_csv(wikimatrix_filepath, separator='\\t', truncate_ragged_lines=True, infer_schema_length=1000000, ignore_errors=True)\n",
+    "europarl_filepath = 'data/translation/europarl.tsv'\n",
     "\n",
-    "df.head()"
+    "df_europarl = pl.read_csv(europarl_filepath, separator='\\t', quote_char=None, ignore_errors=True, truncate_ragged_lines=True)\n",
+    "\n",
+    "string_columns = [col for col in df_europarl.columns if df_europarl[col].dtype == pl.Utf8] \n",
+    "\n",
+    "mask = reduce(operator.or_, [(count_quotes(col) % 2 != 0) for col in string_columns])\n",
+    "df_europarl = df_europarl.filter(~mask)\n",
+    "df_europarl = df_europarl.rename({\n",
+    "    df_europarl.columns[0]: \"lhs\",\n",
+    "    df_europarl.columns[1]: \"rhs\",\n",
+    "})\n",
+    "\n",
+    "df_europarl.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lhs</th><th>rhs</th></tr><tr><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;As families grow in size, so t…</td><td>&quot;Čím větší rodina, tím více pož…</td></tr><tr><td>&quot;Weather in Barueri: no precipi…</td><td>&quot;Počasí v Barueri: přeháňky - 0…</td></tr><tr><td>&quot;Local Time: Sīdī Sālim, Egypt&quot;</td><td>&quot;Místní čas: Al Husayniyah, Egy…</td></tr><tr><td>&quot;Then let him patiently wait an…</td><td>&quot;Pak nechť trpělivě čeká a pečl…</td></tr><tr><td>&quot;* many opportunities to share …</td><td>&quot;• mnoho příležitostí k otevřen…</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 2)\n",
+       "┌─────────────────────────────────┬─────────────────────────────────┐\n",
+       "│ lhs                             ┆ rhs                             │\n",
+       "│ ---                             ┆ ---                             │\n",
+       "│ str                             ┆ str                             │\n",
+       "╞═════════════════════════════════╪═════════════════════════════════╡\n",
+       "│ As families grow in size, so t… ┆ Čím větší rodina, tím více pož… │\n",
+       "│ Weather in Barueri: no precipi… ┆ Počasí v Barueri: přeháňky - 0… │\n",
+       "│ Local Time: Sīdī Sālim, Egypt   ┆ Místní čas: Al Husayniyah, Egy… │\n",
+       "│ Then let him patiently wait an… ┆ Pak nechť trpělivě čeká a pečl… │\n",
+       "│ * many opportunities to share … ┆ • mnoho příležitostí k otevřen… │\n",
+       "└─────────────────────────────────┴─────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "from functools import reduce\n",
+    "import operator\n",
+    "\n",
+    "def count_quotes(column):\n",
+    "    return pl.col(column).str.count_matches('\"')\n",
+    "\n",
+    "paracrawl_filepath = 'data/translation/paracrawl.txt'\n",
+    "\n",
+    "df_paracrawl = pl.read_csv(paracrawl_filepath, separator='\\t', quote_char=None, ignore_errors=True, truncate_ragged_lines=True)\n",
+    "\n",
+    "string_columns = [col for col in df_paracrawl.columns if df_paracrawl[col].dtype == pl.Utf8] \n",
+    "\n",
+    "mask = reduce(operator.or_, [(count_quotes(col) % 2 != 0) for col in string_columns])\n",
+    "df_paracrawl = df_paracrawl.filter(~mask)\n",
+    "df_paracrawl = df_paracrawl.rename({\n",
+    "    df_paracrawl.columns[0]: \"lhs\",\n",
+    "    df_paracrawl.columns[1]: \"rhs\",\n",
+    "})\n",
+    "\n",
+    "df_paracrawl.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create function that converts our datasets to alpaca format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define all types of quotes to remove\n",
-    "quotes = ['\"', \"'\", '\"', '\"', ''', ''', '‚', '‛', '„', '‟', \"`\", \"´\", \"‘\", \"“\", \"’\"]\n",
-    "    \n",
-    "with open('data/translation/wikimatrix.tsv', 'r') as infile, open('data/translation/wikimatrix_2.tsv', 'w') as outfile:\n",
-    "    for line in infile:\n",
-    "        # Remove all types of quotes\n",
-    "        for quote in quotes:\n",
-    "            line = line.replace(quote, '')\n",
-    "        outfile.write(line)"
+    "from typing import Optional, List, Dict\n",
+    "import json\n",
+    "\n",
+    "def convert_to_alpaca(df: pl.DataFrame, instruction: str, output_col: str, input_col: Optional[str] = None, output_path: str = \"dataset.jsonl\"):\n",
+    "    records: List[Dict] = []\n",
+    "\n",
+    "    for row in df.iter_rows(named=True):\n",
+    "        record = {\n",
+    "            \"instruction\": instruction\n",
+    "        }\n",
+    "\n",
+    "        if input_col and row[input_col]:\n",
+    "            record[\"input\"] = row[input_col]\n",
+    "\n",
+    "        record[\"output\"] = row[output_col]\n",
+    "\n",
+    "        records.append(record)\n",
+    "\n",
+    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "        for record in records:\n",
+    "            f.write(json.dumps(record, ensure_ascii=False) + '\\n')\n",
+    "\n",
+    "    print(f\"Saved to path: {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally convert our datasets to alpaca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to path: data/translation/dataset/europarl.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "europarl_jsonl_outputpath = 'data/translation/dataset/europarl.jsonl'\n",
+    "\n",
+    "convert_to_alpaca(df_europarl, instruction=\"Přelož tento text z angličtiny do češtiny\", input_col=\"rhs\", output_col=\"lhs\", output_path=europarl_jsonl_outputpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to path: data/translation/dataset/paracrawl.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "paracrawl_jsonl_outputpath = 'data/translation/dataset/paracrawl.jsonl'\n",
+    "\n",
+    "convert_to_alpaca(df_paracrawl, instruction=\"Přelož tento text z angličtiny do češtiny\", input_col=\"lhs\", output_col=\"rhs\", output_path=paracrawl_jsonl_outputpath)"
    ]
   }
  ],
