--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -65,9 +65,7 @@
    "outputs": [],
    "source": [
     "%pip install datasets\n",
-    "%pip install polars\n",
-    "%pip install seaborn\n",
-    "%pip install matplotlib"
+    "%pip install polars"
    ]
   },
   {
