infra: added links to datasources to notebook

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -44,7 +44,10 @@
     "\n",
     "Dataset preparation is a crucial part of the fine-tuning process. We will use the following datasets:\n",
     "\n",
-    "- Czech News Simple: https://huggingface.co/datasets/CIIRC-NLP/czech_news_simple-cs\n",
+    "- Europarl: https://www.statmt.org/europarl/v10/training/\n",
+    "https://www.statmt.org/europarl/v10/training/europarl-v10.cs-en.tsv.gz\n",
+    "- Paracrawl: https://web-language-models.s3.amazonaws.com/paracrawl/release9/en-cs/en-cs.txt.gz\n",
+    "- Czech News Simple: https://huggingface.co/datasets/CIIRC-NLP/czech_news_simple-cs\\n\n",
     "- Czech News Simple is a dataset of Czech news articles, which is a good starting point for our dataset preparation.\n",
     "\n",
     "We will also use the following datasets:\n",
