feat: translation dataset preprocessing and alpaca format conversion (#1)

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -44,7 +44,10 @@
     "\n",
     "Dataset preparation is a crucial part of the fine-tuning process. We will use the following datasets:\n",
     "\n",
-    "- Czech News Simple: https://huggingface.co/datasets/CIIRC-NLP/czech_news_simple-cs\n",
+    "- Europarl: https://www.statmt.org/europarl/v10/training/\n",
+    "https://www.statmt.org/europarl/v10/training/europarl-v10.cs-en.tsv.gz\n",
+    "- Paracrawl: https://web-language-models.s3.amazonaws.com/paracrawl/release9/en-cs/en-cs.txt.gz\n",
+    "- Czech News Simple: https://huggingface.co/datasets/CIIRC-NLP/czech_news_simple-cs\\n\n",
     "- Czech News Simple is a dataset of Czech news articles, which is a good starting point for our dataset preparation.\n",
     "\n",
     "We will also use the following datasets:\n",
@@ -69,20 +72,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we preprocess our datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "import polars as pl\n",
+    "from functools import reduce\n",
+    "import operator\n",
     "\n",
-    "ds = load_dataset(\"CIIRC-NLP/czech_news_simple-cs\", \"default\")"
+    "def count_quotes(column):\n",
+    "    return pl.col(column).str.count_matches('\"')\n",
+    "\n",
+    "europarl_filepath = 'data/translation/europarl.tsv'\n",
+    "\n",
+    "df_europarl = pl.read_csv(europarl_filepath, separator='\\t', quote_char=None, ignore_errors=True, truncate_ragged_lines=True)\n",
+    "\n",
+    "string_columns = [col for col in df_europarl.columns if df_europarl[col].dtype == pl.Utf8] \n",
+    "\n",
+    "mask = reduce(operator.or_, [(count_quotes(col) % 2 != 0) for col in string_columns])\n",
+    "df_europarl = df_europarl.filter(~mask)\n",
+    "df_europarl = df_europarl.rename({\n",
+    "    df_europarl.columns[0]: \"lhs\",\n",
+    "    df_europarl.columns[1]: \"rhs\",\n",
+    "})\n",
+    "\n",
+    "df_europarl.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "from functools import reduce\n",
+    "import operator\n",
+    "\n",
+    "def count_quotes(column):\n",
+    "    return pl.col(column).str.count_matches('\"')\n",
+    "\n",
+    "paracrawl_filepath = 'data/translation/paracrawl.txt'\n",
+    "\n",
+    "df_paracrawl = pl.read_csv(paracrawl_filepath, separator='\\t', quote_char=None, ignore_errors=True, truncate_ragged_lines=True)\n",
+    "\n",
+    "string_columns = [col for col in df_paracrawl.columns if df_paracrawl[col].dtype == pl.Utf8] \n",
+    "\n",
+    "mask = reduce(operator.or_, [(count_quotes(col) % 2 != 0) for col in string_columns])\n",
+    "df_paracrawl = df_paracrawl.filter(~mask)\n",
+    "df_paracrawl = df_paracrawl.rename({\n",
+    "    df_paracrawl.columns[0]: \"lhs\",\n",
+    "    df_paracrawl.columns[1]: \"rhs\",\n",
+    "})\n",
+    "\n",
+    "df_paracrawl.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create function that converts our datasets to alpaca format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional, List, Dict\n",
+    "import json\n",
+    "\n",
+    "def convert_to_alpaca(df: pl.DataFrame, instruction: str, output_col: str, input_col: Optional[str] = None, output_path: str = \"dataset.jsonl\"):\n",
+    "    records: List[Dict] = []\n",
+    "\n",
+    "    for row in df.iter_rows(named=True):\n",
+    "        record = {\n",
+    "            \"instruction\": instruction\n",
+    "        }\n",
+    "\n",
+    "        if input_col and row[input_col]:\n",
+    "            record[\"input\"] = row[input_col]\n",
+    "\n",
+    "        record[\"output\"] = row[output_col]\n",
+    "\n",
+    "        records.append(record)\n",
+    "\n",
+    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "        for record in records:\n",
+    "            f.write(json.dumps(record, ensure_ascii=False) + '\\n')\n",
+    "\n",
+    "    print(f\"Saved to path: {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally convert our datasets to alpaca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "europarl_jsonl_outputpath = 'data/translation/dataset/europarl.jsonl'\n",
+    "\n",
+    "convert_to_alpaca(df_europarl, instruction=\"Přelož tento text z angličtiny do češtiny\", input_col=\"rhs\", output_col=\"lhs\", output_path=europarl_jsonl_outputpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paracrawl_jsonl_outputpath = 'data/translation/dataset/paracrawl.jsonl'\n",
+    "\n",
+    "convert_to_alpaca(df_paracrawl, instruction=\"Přelož tento text z angličtiny do češtiny\", input_col=\"lhs\", output_col=\"rhs\", output_path=paracrawl_jsonl_outputpath)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gemma-global-competetion",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
