feat: convert books dataset to jsonl

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -151,6 +151,7 @@
    "source": [
     "from typing import Optional, List, Dict\n",
     "import json\n",
+    "import polars as pl\n",
     "\n",
     "def convert_to_alpaca(df: pl.DataFrame, instruction: str, output_col: str, input_col: Optional[str] = None, output_path: str = \"dataset.jsonl\"):\n",
     "    records: List[Dict] = []\n",
@@ -201,6 +202,37 @@
     "paracrawl_jsonl_outputpath = 'data/translation/dataset/paracrawl.jsonl'\n",
     "\n",
     "convert_to_alpaca(df_paracrawl, instruction=\"Přelož tento text z angličtiny do češtiny\", input_col=\"lhs\", output_col=\"rhs\", output_path=paracrawl_jsonl_outputpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to path: data/translation/dataset/books.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset('vojtam/czech_books_descriptions', split='train')\n",
+    "\n",
+    "dataset = dataset.rename_columns({\n",
+    "  \"title\": \"lhs\",\n",
+    "  \"text\": \"rhs\"\n",
+    "})\n",
+    "\n",
+    "polars_dataset = dataset.to_polars()\n",
+    "\n",
+    "books_jsonl_outputpath = 'data/translation/dataset/books.jsonl'\n",
+    "\n",
+    "convert_to_alpaca(polars_ataset, instruction=\"Řekni mi něco o knize\", input_col=\"lhs\", output_col=\"rhs\", output_path=books_jsonl_outputpath)\n",
+    "\n"
    ]
   }
  ],
