chore: adapt to my machine

--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -694,10 +694,18 @@
                 "    early_stopping_patience: int = 3\n",
                 "    early_stopping_threshold: float = 0.01\n",
                 "\n",
-                "    # Training settings\n",
-                "    batch_size: int = 4\n",
-                "    gradient_accumulation_steps: int = 4\n",
-                "    num_epochs: int = 3\n",
+                "    # Training settings (A40) - Experimenting with smaller batch size\n",
+                "    batch_size: int = 8\n",
+                "    gradient_accumulation_steps: int = 2\n",
+                "    num_epochs: int = 2\n",
+                "    eval_steps: int = 1000\n",
+                "\n",
+                "    # Training settings (H200) - Full fine-tuning\n",
+                "    # batch_size: int = 64\n",
+                "    # gradient_accumulation_steps: int = 2\n",
+                "    # num_epochs: int = 3\n",
+                "    # eval_steps: int = 500\n",
+                "\n",
                 "    learning_rate: float = 2e-4\n",
                 "    weight_decay: float = 0.01\n",
                 "    warmup_ratio: float = 0.03\n",
@@ -969,9 +977,9 @@
                 "        generation_num_beams=4,  # Beam search for better translations\n",
                 "        # Evaluation settings\n",
                 "        evaluation_strategy=\"steps\",\n",
-                "        eval_steps=100,\n",
+                "        eval_steps=config.eval_steps,\n",
                 "        save_strategy=\"steps\",\n",
-                "        save_steps=100,\n",
+                "        save_steps=config.eval_steps,\n",
                 "        # Logging\n",
                 "        logging_steps=10,\n",
                 "        report_to=\"wandb\",\n",
