--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -54,20 +54,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Note: you may need to restart the kernel to use updated packages.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Install core dependencies\n",
-                "%pip install -q datasets polars tqdm fasttext torch transformers wandb seaborn matplotlib numpy peft evaluate\n",
+                "%pip install -q datasets polars tqdm fasttext torch transformers>=4.47.1 wandb seaborn matplotlib numpy peft>=0.14.0 evaluate huggingface_hub bitsandbytes>=0.45.0\n",
                 "\n",
                 "# Import common libraries\n",
                 "import polars as pl\n",
@@ -106,7 +98,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 72,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -263,7 +255,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 73,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -459,7 +451,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 74,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -579,7 +571,7 @@
                 "# Load ParaCrawl\n",
                 "print(\"Loading and analyzing ParaCrawl dataset...\")\n",
                 "df_paracrawl = loader.load_dataframe()\n",
-                "df_paracrawl = df_paracrawl.slice(0, 500000)\n",
+                "df_paracrawl = df_paracrawl.slice(0, 50000)\n",
                 "\n",
                 "print(\"Raw ParaCrawl dataset:\")\n",
                 "print(df_paracrawl.head())\n",
@@ -612,8 +604,22 @@
                 "    source_lang=\"en\",\n",
                 "    target_lang=\"cs\",\n",
                 "    output_path=paracrawl_path,\n",
-                ")\n",
-                "\n",
+                ")\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Now let's examine the processed dataset."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "# Load processed datasets\n",
                 "print(\"Loading processed datasets...\")\n",
                 "translations_ds = load_dataset(\n",
@@ -622,7 +628,7 @@
                 ")\n",
                 "\n",
                 "print(\"Translations dataset:\")\n",
-                "print(translations_ds.to_polars().head())\n"
+                "print(translations_ds[\"train\"].to_polars().head())"
             ]
         },
         {
@@ -660,7 +666,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -673,7 +679,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -687,7 +693,7 @@
                 "\n",
                 "    # LoRA settings\n",
                 "    lora_r: int = 8\n",
-                "    lora_alpha: int = 32\n",
+                "    lora_alpha: int = 16\n",
                 "    lora_dropout: float = 0.1\n",
                 "\n",
                 "    # Early stopping settings\n",
@@ -695,10 +701,11 @@
                 "    early_stopping_threshold: float = 0.01\n",
                 "\n",
                 "    # Training settings (A40) - Experimenting with smaller batch size\n",
-                "    batch_size: int = 8\n",
-                "    gradient_accumulation_steps: int = 2\n",
+                "    batch_size: int = 16\n",
+                "    gradient_accumulation_steps: int = 4\n",
+                "    max_grad_norm: float = 1.0\n",
                 "    num_epochs: int = 2\n",
-                "    eval_steps: int = 1000\n",
+                "    eval_steps: int = 2000\n",
                 "\n",
                 "    # Training settings (H200) - Full fine-tuning\n",
                 "    # batch_size: int = 64\n",
@@ -706,7 +713,7 @@
                 "    # num_epochs: int = 3\n",
                 "    # eval_steps: int = 500\n",
                 "\n",
-                "    learning_rate: float = 2e-4\n",
+                "    learning_rate: float = 3e-4\n",
                 "    weight_decay: float = 0.01\n",
                 "    warmup_ratio: float = 0.03\n",
                 "\n",
@@ -726,7 +733,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -791,12 +798,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
-                "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, LoraConfig, TaskType\n",
-                "from peft import get_peft_model, prepare_model_for_kbit_training\n",
+                "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
+                "from peft import get_peft_model, prepare_model_for_kbit_training, LoraConfig, TaskType\n",
                 "\n",
                 "def setup_model_and_tokenizer(config: TrainingConfig):\n",
                 "    \"\"\"Initialize model with LoRA and quantization\"\"\"\n",
@@ -807,9 +814,8 @@
                 "    # Quantization config\n",
                 "    quant_config = BitsAndBytesConfig(\n",
                 "        load_in_4bit=True,\n",
-                "        bnb_4bit_compute_dtype=DTYPE,\n",
                 "        bnb_4bit_quant_type=\"nf4\",\n",
-                "        bnb_4bit_use_double_quant=True,\n",
+                "        bnb_4bit_compute_dtype=torch.bfloat16,\n",
                 "    )\n",
                 "\n",
                 "    # Load base model\n",
@@ -828,7 +834,7 @@
                 "    lora_config = LoraConfig(\n",
                 "        r=config.lora_r,\n",
                 "        lora_alpha=config.lora_alpha,\n",
-                "        target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\"],\n",
+                "        target_modules=[\"q_proj\", \"o_proj\", \"k_proj\", \"v_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
                 "        lora_dropout=config.lora_dropout,\n",
                 "        bias=\"none\",\n",
                 "        task_type=TaskType.CAUSAL_LM,\n",
@@ -849,7 +855,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -889,7 +895,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -966,30 +972,30 @@
                 "        output_dir=config.output_dir,\n",
                 "        num_train_epochs=config.num_epochs,\n",
                 "        per_device_train_batch_size=config.batch_size,\n",
-                "        per_device_eval_batch_size=config.batch_size,\n",
+                "        per_device_eval_batch_size=config.batch_size * 2,\n",
                 "        gradient_accumulation_steps=config.gradient_accumulation_steps,\n",
                 "        learning_rate=config.learning_rate,\n",
                 "        weight_decay=config.weight_decay,\n",
                 "        warmup_ratio=config.warmup_ratio,\n",
-                "        # Added specific settings for translation\n",
-                "        predict_with_generate=True,\n",
-                "        generation_max_length=config.max_length,\n",
-                "        generation_num_beams=4,  # Beam search for better translations\n",
+                "        max_grad_norm=config.max_grad_norm,\n",
                 "        # Evaluation settings\n",
                 "        evaluation_strategy=\"steps\",\n",
                 "        eval_steps=config.eval_steps,\n",
                 "        save_strategy=\"steps\",\n",
                 "        save_steps=config.eval_steps,\n",
-                "        # Logging\n",
-                "        logging_steps=10,\n",
-                "        report_to=\"wandb\",\n",
                 "        # Hardware optimization\n",
-                "        fp16=True,\n",
+                "        bf16=True,\n",
                 "        gradient_checkpointing=True,\n",
+                "        # Logging\n",
+                "        logging_strategy=\"steps\",\n",
+                "        logging_steps=50,\n",
+                "        logging_first_step=True,\n",
+                "        report_to=\"wandb\",\n",
                 "        # Model selection\n",
                 "        load_best_model_at_end=True,\n",
                 "        metric_for_best_model=\"bleu\",\n",
                 "        greater_is_better=True,\n",
+                "        optim=\"paged_adamw_32bit\",\n",
                 "    )"
             ]
         },
@@ -1138,7 +1144,10 @@
                 "    def __init__(self, model_path: str):\n",
                 "        self.tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b-it\")\n",
                 "        self.model = AutoModelForCausalLM.from_pretrained(\n",
-                "            model_path, device_map=\"auto\", torch_dtype=DTYPE\n",
+                "            model_path,\n",
+                "            device_map=\"auto\",\n",
+                "            torch_dtype=DTYPE,\n",
+                "            trust_remote_code=True,\n",
                 "        )\n",
                 "        self.model.eval()\n",
                 "\n",
@@ -1273,7 +1282,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.15"
+            "version": "3.10.12"
         }
     },
     "nbformat": 4,
